--- a/render.yaml
+++ b/render.yaml
@@ -11,3 +11,5 @@ services:
         value: 10000
       - key: FLASK_ENV
         value: production
+      - key: PYTHONPATH
+        value: /opt/render/project/src/backend
